--- a/fitcree-design-app/src/app/globals.css
+++ b/fitcree-design-app/src/app/globals.css
@@ -28,3 +28,31 @@ body {
 button {
   cursor: pointer;
 }
+
+.link-blue {
+  position: relative;
+  color: #2563eb;
+  transition: color 0.15s ease-in-out;
+  padding-bottom: 4px;
+  font-weight: 500;
+}
+
+.link-blue:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: "";
+  display: inline-block;
+  width: 0;
+  height: 1px;
+  background-color: #2563eb;
+  transition: width 0.15s ease-in-out;
+}
+
+.link-blue:hover {
+  color: #0c34a0;
+}
+
+.link-blue:hover:after {
+  width: 100%;
+}
